--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zenreiv</title>
+    <title>Zenreiv: A Software & Web Developer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>It works!!</h1>
+    <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+        <div class="card m-auto" style="width: 18rem;">
+            <img src="./assets/images/avatar.png" class="card-img-top" alt="My Avatar">
+            <div class="card-body">
+                <h5 class="card-title text-center h2">PROJECTS</h5>
+                <hr class="border border-primary border-3">
+                <p class="card-text">
+                    Heimdallr - A custom Ragnarok Online server project.
+                </p>
+                <a href="https://github.com/ProjectHeimdallr" target="_blank" class="w-100 btn btn-primary">Check Heimdallr</a>
+                <hr class="border border-primary border-3">
+                <p class="card-text m-2">
+                    ASROCP - A Simple Ragnarok Online Control Panel.
+                </p>
+                <a href="https://github.com/zenreiv/ASROCP" target="_blank" class="w-100 btn btn-primary">Check ASROCP</a>
+            </div>
+        </div>
+    </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </html>
