--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Zenreiv: A Software & Web Developer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
@@ -23,6 +24,11 @@
                     ASROCP - A Simple Ragnarok Online Control Panel.
                 </p>
                 <a href="https://github.com/zenreiv/ASROCP" target="_blank" class="w-100 btn btn-primary">Check ASROCP</a>
+                <hr class="border border-primary border-3">
+                <div class="text-center">
+                    <a href="https://github.com/zenreiv/" target="_blank" class="m-auto h2"><i class="bi bi-github"></i></a>
+                    <a href="https://discord.com/users/518007618518646807" target="_blank" class="m-auto h2"><i class="bi bi-discord"></i></a>
+                </div>
             </div>
         </div>
     </div>
